# nixos-config

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project  clark.cabal  clark.nix  flake.nix  secrets.nix  switch.sh
app/: Compound.hs  Email.hs  GPIO.hs  Mailgun.hs  Main.hs
app/MQTT/: Meross.hs
app/Util/: Lifx.hs
apple-brcm/: brcmbt4388c0-apple,willamette-u.ptb  brcmfmac4364b2-pcie.apple,ekans.clm_blob  brcmfmac4364b2-pcie.apple,ekans.txcap_blob  brcmfmac4364b2-pcie.apple,hanauma.clm_blob  brcmfmac4364b2-pcie.apple,hanauma.txcap_blob  brcmfmac4364b2-pcie.apple,kahana.clm_blob  brcmfmac4364b2-pcie.apple,kahana.txcap_blob  brcmfmac4364b2-pcie.apple,kauai.clm_blob  brcmfmac4364b2-pcie.apple,kauai.txcap_blob  brcmfmac4364b2-pcie.apple,lanai.clm_blob  brcmfmac4364b2-pcie.apple,lanai.txcap_blob  brcmfmac4364b2-pcie.apple,maui.clm_blob  brcmfmac4364b2-pcie.apple,maui.txcap_blob  brcmfmac4364b2-pcie.apple,midway.clm_blob  brcmfmac4364b2-pcie.apple,midway.txcap_blob  brcmfmac4364b2-pcie.apple,nihau.clm_blob  brcmfmac4364b2-pcie.apple,nihau.txcap_blob  brcmfmac4364b2-pcie.apple,sid.clm_blob  brcmfmac4364b2-pcie.apple,sid.txcap_blob  brcmfmac4364b3-pcie.apple,bali.clm_blob  brcmfmac4364b3-pcie.apple,bali.txcap_blob  brcmfmac4364b3-pcie.apple,borneo.clm_blob  brcmfmac4364b3-pcie.apple,borneo.txcap_blob  brcmfmac4364b3-pcie.apple,hanauma.clm_blob  brcmfmac4364b3-pcie.apple,hanauma.txcap_blob  brcmfmac4364b3-pcie.apple,kahana.clm_blob  brcmfmac4364b3-pcie.apple,kahana.txcap_blob  brcmfmac4364b3-pcie.apple,kure.clm_blob  brcmfmac4364b3-pcie.apple,kure.txcap_blob  brcmfmac4364b3-pcie.apple,sid.clm_blob  brcmfmac4364b3-pcie.apple,sid.txcap_blob  brcmfmac4364b3-pcie.apple,trinidad.clm_blob  brcmfmac4364b3-pcie.apple,trinidad.txcap_blob  brcmfmac4377b3-pcie.apple,fiji.clm_blob  brcmfmac4377b3-pcie.apple,fiji.txcap_blob  brcmfmac4377b3-pcie.apple,formosa.clm_blob  brcmfmac4377b3-pcie.apple,formosa.txcap_blob  brcmfmac4377b3-pcie.apple,tahiti.clm_blob  brcmfmac4377b3-pcie.apple,tahiti.txcap_blob
clark/: clark.nix
clark/haskell/: cabal.project  clark.cabal  flake.nix
clark/haskell/app/: GPIO.hs  Mailgun.hs  Main.hs  Util.hs
clark/haskell/app/George/: Core.hs
clark/haskell/app/George/Feed/: GPIO.hs  UDP.hs  WebServer.hs
clark/haskell/app/Util/: GPIO.hs  Lifx.hs
hardware-configuration/: README.md  clark.nix  crow.nix  fry.nix
haskell/clark/app/: Main.hs
haskell/clark/app/George/Feed/: GPIO.hs
haskell/clark/app/MQTT/: Meross.hs
haskell/magic-mouse/: MagicMouse.hs  magic-mouse.cabal
haskell/magic-mouse/app/: MagicMouse.hs
machines/: clark.nix  crow.nix  fry.nix
modules/: clark.nix  common-users.nix  desktop.nix  haskell-libs.nix  obsidian.nix  universal.nix  vscode-extensions.nix
secrets/: github.key.age  mailgun.key.age  mailgun.sandbox.age  passwords.lta.age  secrets.nix  wifi.RML-5ghz.psk.age  wifi.TNCAPA620AF.psk.age  wifi.age
util/: apple-t2.nix  common-desktop.nix  common-users.nix  common.nix  haskell-libs.nix  obsidian.nix  vscode-extensions.nix
