cabal-version:      3.0
name:               clark
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable clark
    main-is: Main.hs
    default-extensions:
        BlockArguments
        DeriveAnyClass
        DeriveGeneric
        NoMonomorphismRestriction
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
    build-depends:
        base >= 4.14,
        ansi-terminal >= 0.11,
        bytestring >= 0.10.12,
        extra >= 1.7.10,
        time >= 1.9.3,
        process >= 1.6.13,
        lifx-lan >= 0.5.0,
        monad-loops >= 0.4.3,
        network >= 3.1.2,
        optparse-generic >= 1.4.6,
        text >= 1.2.4,
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:
        -Wall
