cabal-version:      3.0
name:               clark
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable clark
    main-is: Main.hs
    default-extensions:
        BlockArguments
        LambdaCase
        NoMonomorphismRestriction
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
    build-depends:
        base >= 4.16,
        ansi-terminal >= 0.11,
        async >= 2.2.4,
        binary >= 0.8.9,
        bytestring >= 0.10.12,
        extra >= 1.7.10,
        lifx-lan >= 0.5.0,
        monad-loops >= 0.4.3,
        network >= 3.1.2,
        optparse-generic >= 1.4.6,
        pretty-simple >= 4.0.0,
        process >= 1.6.13,
        text >= 1.2.4,
        time >= 1.9.3,
    hs-source-dirs: app
    default-language: GHC2021
    ghc-options:
        -Wall
