cabal-version:      3.0
name:               clark
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable clark
    main-is: Main.hs
    other-modules:
        George.Core
        George.Feed.GPIO
        George.Feed.UDP
        George.Feed.WebServer
        MQTT.Meross
        Util
        Util.Lifx
    hs-source-dirs: app
    default-language: GHC2021
    default-extensions:
        BlockArguments
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        LambdaCase
        ImpredicativeTypes
        NoFieldSelectors
        NoMonomorphismRestriction
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        TypeData
        ViewPatterns
    build-depends:
        base >= 4.16,
        georgefst-utils,
        georgefst-utils:gpio-utils,
        georgefst-utils:streamly-utils,
        georgefst-utils:streamly-gpio,
        georgefst-utils:streamly-udp,
        georgefst-utils:streamly-okapi,
        aeson ^>= 2.1.1,
        async >= 2.2.4,
        binary >= 0.8.9,
        bytestring >= 0.10.12,
        containers >= 0.6,
        directory >= 1.2,
        exceptions >= 0.10,
        extra >= 1.7.10,
        freer-simple >= 1.2.1.2,
        http-api-data >= 0.6,
        http-types >= 0.12.3,
        lifx-lan >= 0.8.0,
        logging-effect >= 1.3.13,
        monad-loops >= 0.4.3,
        mtl >= 2.2.2,
        network >= 3.1.2,
        okapi >= 0.1,
        optics >= 0.4.2,
        optics-extra >= 0.4.2,
        optparse-generic >= 1.4.6,
        pretty-simple >= 4.1,
        rawfilepath >= 1.0,
        streamly >= 0.10,
        streamly-core >= 0.1,
        text >= 1.2.4,
        time >= 1.9.3,
        wai >= 3.2,
        warp >= 3.3.28,
    ghc-options:
        -Wall
        -threaded
