cabal-version:      3.0
name:               magic-mouse
version:            0.1.0.0
license:            BSD-3-Clause
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable magic-mouse
    main-is: MagicMouse.hs
    hs-source-dirs: app
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DuplicateRecordFields
        LexicalNegation
        MultiWayIf
        NoFieldSelectors
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        ViewPatterns
    build-depends:
        base >= 4.16,
        async >= 2.2.4,
        bytestring >= 0.10.12,
        containers >= 0.6,
        directory >= 1.2,
        evdev >= 2.3,
        exceptions >= 0.10,
        extra >= 1.7.10,
        filepath >= 1.5,
        monad-loops >= 0.4.3,
        mtl >= 2.2.2,
        optics >= 0.4.2,
        optics-extra >= 0.4.2,
        optparse-generic >= 1.4.6,
        pretty-simple >= 4.1,
        streamly >= 0.10,
        streamly-core >= 0.2,
        text >= 1.2.4,
        time >= 1.9.3,
    ghc-options:
        -Wall
        -threaded
